apps/the-lounge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-lounge
spec:
  ports:
    - port: 9000
  selector:
    app: the-lounge
