apps/the-lounge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-lounge
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd,traefik-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - chat.hubbe.club
      secretName: the-lounge-cert
  rules:
    - host: chat.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: the-lounge
                port:
                  number: 9000
